--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -13,8 +13,8 @@
 
 <header class="top-bar">
     <div class="brand">
-        <span class="brand-icon">📊</span>
-        <span class="brand-text">AIStockTool</span>
+        <img class="brand-logo" src="{% static 'images/seestoxlogo.png' %}" alt="SeeStox logo">
+        <span class="brand-text">SeeStox AI</span>
        <!--  <span class="badge">PRO</span>    -->
 
         {% if trial_badge %}
