--- a/templates/privacypolicy/privacypolicy.html
+++ b/templates/privacypolicy/privacypolicy.html
@@ -174,7 +174,7 @@
             If you have any questions about this Privacy Policy or our data practices,
             please contact us at:
         </p>
-        <p class="contact-email">support@seestox.com</p>
+        <p class="contact-email">seestox@gmail.com</p>
     </div>
 
 </div>
